--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="style.css">
     <title>Riki Kuniyuki | Home</title>
   </head>
   <body>
@@ -39,7 +40,7 @@
     </nav>
 
     <!-- Main Image -->
-    <section class="pt-5">
+    <section id="mainPageBG" class="mt-5 mb-5">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-7 col-md-6 col-lg-4">
@@ -48,6 +49,10 @@
         </div>
       </div>
     </section>
+
+    <!-- Title -->
+    <h1 id="mainTitle" class="text-center">Riki Kuniyuki</h1>
+    <h4 class="text-center">Animation Portfolio</h4>
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-light p-4 fixed-bottom">
