--- a/index.html
+++ b/index.html
@@ -51,8 +51,47 @@
     </section>
 
     <!-- Title -->
-    <h1 id="mainTitle" class="text-center">Riki Kuniyuki</h1>
-    <h4 class="text-center">Animation Portfolio</h4>
+    <section class="mb-5">
+      <h1 id="mainTitle" class="text-center">Riki Kuniyuki</h1>
+      <h4 class="text-center">Animation Portfolio</h4>
+    </section>
+
+    <!--  Cards -->
+    <section id="IndexCards">
+      <div class="container">
+        <div class="row g-5 justify-content-center align-items-center">
+          <div class="col-lg-3 card text-center">
+            <img src="images/GraduationAnimation.mp4" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Animator</h5>
+              <button class="btn btn-secondary">Check Out My Animations!</button>
+            </div>
+          </div>
+
+          <div class="col-lg-3 card text-center offset-lg-1">
+            <img src="images/3d_batman2.jpeg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">3D Modeller</h5>
+              <button class="btn btn-secondary">Check Out My Animations!</button>
+            </div>
+          </div>
+          <div class="col-lg-3 card text-center offset-lg-1">
+            <img src="images/cd_gorillafighter.jpeg" class="card-img-top">
+            <div class="card-body">
+              <h5 class="card-title">Character Designer</h5>
+              <button class="btn btn-secondary">Check Out My Animations!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-light p-4 fixed-bottom">
