Adds links to buttons and changes button text to match links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="images/GraduationAnimation.mp4" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Animator</h5>
-              <button class="btn btn-secondary">Check Out My Animations!</button>
+              <button onclick="window.location.href='animation.html';" class="btn btn-secondary">Check Out My Animations!</button>
             </div>
           </div>
 
@@ -72,14 +72,14 @@
             <img src="images/3d_batman2.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">3D Modeller</h5>
-              <button class="btn btn-secondary">Check Out My Animations!</button>
+              <button onclick="window.location.href='3dmodelling.html';" class="btn btn-secondary">Check Out My 3D Models!</button>
             </div>
           </div>
           <div class="col-lg-3 card text-center offset-lg-1">
             <img src="images/cd_gorillafighter.jpeg" class="card-img-top">
             <div class="card-body">
               <h5 class="card-title">Character Designer</h5>
-              <button class="btn btn-secondary">Check Out My Animations!</button>
+              <button onclick="window.location.href='characterdesign.html';" class="btn btn-secondary">Check Out My Character Designs!</button>
             </div>
           </div>
         </div>
