Adds email contact in footer for all pages

--- a/characterdesign.html
+++ b/characterdesign.html
@@ -75,7 +75,7 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-center text-light p-4 fixed-bottom">
-        <div class="container">
+        <div class="container mb-2">
             <a class="text-light" href="https://www.facebook.com/riki.suzukikuniyukihirahara/" target="_blank"><i class="bi bi-facebook h1"></i></a>
             &nbsp;
             <a class="text-light" href="https://www.instagram.com/rikikuniyuki_art/" target="_blank"><i class="bi bi-instagram h1"></i></a>
@@ -83,6 +83,9 @@
             <a class="text-light" href="https://www.linkedin.com/in/riki-kuniyuki-hirahara-aa93b6145/" target="_blank"><i class="bi bi-linkedin h1"></i></a>
             &nbsp;
             <a class="text-light" href="https://www.youtube.com/channel/UCpL5tVv0xmfG3FZDb23LwAw" target="_blank"><i class="bi bi-youtube h1"></i></a>
+        </div>
+        <div>
+          <p>rskh13@gmail.com</p>
         </div>
     </footer>
       
